Fixed Sidebar horizontal overflow and fixed bug where old chats without updated Read property in lastMessage had orange dot

--- a/src/components/Messaging/SidebarChat.css
+++ b/src/components/Messaging/SidebarChat.css
@@ -16,9 +16,9 @@ a{
 }
 
 .sidebarChat__info {
-    margin-left: 15px;
+    padding-left: 15px;
     flex:1;
-    width: calc(100% - 48px);
+    width: calc(100% - 64px);
 }
 
 .sidebarChat__info > h2{
